@@ -4,11 +4,11 @@
  */
 package com.jeesite.modules;
 
-import com.alibaba.nacos.core.listener.StartingApplicationListener;
-import com.alibaba.nacos.mcpregistry.NacosMcpRegistry;
 import com.alibaba.nacos.NacosServerBasicApplication;
 import com.alibaba.nacos.NacosServerWebApplication;
+import com.alibaba.nacos.airegistry.NacosAiRegistry;
 import com.alibaba.nacos.console.NacosConsole;
+import com.alibaba.nacos.core.listener.StartingApplicationListener;
 import com.alibaba.nacos.core.listener.startup.NacosStartUp;
 import com.alibaba.nacos.core.listener.startup.NacosStartUpManager;
 import com.alibaba.nacos.sys.env.Constants;
@@ -27,6 +27,9 @@ import org.springframework.core.env.Environment;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.jmx.export.MBeanExporter;
 import org.springframework.jmx.support.RegistrationPolicy;
+
+import java.lang.management.ManagementFactory;
+import java.util.List;
 
 /**
  * Nacos bootstrap class.
@@ -54,10 +57,33 @@ public class NacosApplication {
 		System.setProperty("nacos.logs.path", System.getProperty("nacos.home") + "/logs");
 		System.setProperty("derby.stream.error.file", System.getProperty("nacos.home") + "/.derby.log");
 		System.setProperty("logging.config", "classpath:nacos-logback.xml");
+		
+	}
+	
+	private static boolean checkAddOpens() {
+		List<String> inputArgs = ManagementFactory.getRuntimeMXBean().getInputArguments();
+		String targetParam1 = "--add-opens=java.base/java.util=ALL-UNNAMED";
+		String targetParam2 = "--add-opens java.base/java.util=ALL-UNNAMED"; // 空格形式
+		for (String arg : inputArgs) {
+			if (arg.equals(targetParam1) || arg.equals(targetParam2)) {
+				return true;
+			}
+		}
+		return false;
 	}
 
     public static void main(String[] args) {
 		NacosApplication.initialize();
+		if (!NacosApplication.checkAddOpens()) {
+			logger.error(
+					"\n\n==============================================================\n\n" +
+					"  ⚠️ 警告：未检测到 JVM 必要的参数 add-opens，参考如下：\n\n" +
+					"  • 命令行中添加：java --add-opens=java.base/java.util=ALL-UNNAMED -jar app.jar\n" +
+					"  • 或在 IDE “虚拟机选项” 中添加：--add-opens=java.base/java.util=ALL-UNNAMED\n" +
+					"\n==============================================================\n"
+			);
+			return;
+		}
 		ConfigurableApplicationContext context;
         String type = System.getProperty(Constants.NACOS_DEPLOYMENT_TYPE, Constants.NACOS_DEPLOYMENT_TYPE_MERGED);
         DeploymentType deploymentType = DeploymentType.getType(type);
@@ -89,67 +115,73 @@ public class NacosApplication {
             coreContext.getBean(MBeanExporter.class).setRegistrationPolicy(RegistrationPolicy.IGNORE_EXISTING);
         }
     }
-
+    
     private static ConfigurableApplicationContext startWithoutConsole(String[] args) {
         ConfigurableApplicationContext coreContext = startCoreContext(args);
         prepareCoreContext(coreContext);
         ConfigurableApplicationContext webContext = startServerWebContext(args, coreContext);
-        if (isEnabledMcpRegistryApi(coreContext)) {
-            webContext = startMcpRegistryContext(args, coreContext);
+        if (isEnabledAiRegistry(coreContext)) {
+            ConfigurableApplicationContext aiRegistryContext =
+                startAiRegistryContext(args, coreContext);
         }
 		return webContext;
     }
-
+    
     private static ConfigurableApplicationContext startWithConsole(String[] args) {
         ConfigurableApplicationContext coreContext = startCoreContext(args);
         prepareCoreContext(coreContext);
         ConfigurableApplicationContext serverWebContext = startServerWebContext(args, coreContext);
         ConfigurableApplicationContext consoleContext = startConsoleContext(args, coreContext);
-        if (isEnabledMcpRegistryApi(coreContext)) {
-            ConfigurableApplicationContext mcpRegistryContext = startMcpRegistryContext(args, coreContext);
+        if (isEnabledAiRegistry(coreContext)) {
+            ConfigurableApplicationContext aiRegistryContext =
+                startAiRegistryContext(args, coreContext);
         }
 		return consoleContext;
     }
-
+    
     private static ConfigurableApplicationContext startCoreContext(String[] args) {
         NacosStartUpManager.start(NacosStartUp.CORE_START_UP_PHASE);
-        return new SpringApplicationBuilder(NacosServerBasicApplication.class).web(WebApplicationType.NONE)
-                .banner(getBanner("core-banner.txt")).run(args);
+        return new SpringApplicationBuilder(NacosServerBasicApplication.class)
+            .web(WebApplicationType.NONE)
+            .banner(getBanner("core-banner.txt")).run(args);
     }
-
+    
     private static ConfigurableApplicationContext startServerWebContext(String[] args,
-            ConfigurableApplicationContext coreContext) {
+        ConfigurableApplicationContext coreContext) {
         NacosStartUpManager.start(NacosStartUp.WEB_START_UP_PHASE);
         return new SpringApplicationBuilder(NacosServerWebApplication.class).parent(coreContext)
-                .banner(getBanner("nacos-server-web-banner.txt")).run(args);
+            .banner(getBanner("nacos-server-web-banner.txt")).run(args);
     }
-
+    
     private static ConfigurableApplicationContext startConsoleContext(String[] args,
-            ConfigurableApplicationContext coreContext) {
+        ConfigurableApplicationContext coreContext) {
         NacosStartUpManager.start(NacosStartUp.CONSOLE_START_UP_PHASE);
         return new SpringApplicationBuilder(NacosConsole.class).parent(coreContext)
-                .banner(getBanner("nacos-console-banner.txt")).run(args);
+            .banner(getBanner("nacos-console-banner.txt")).run(args);
     }
-
-    private static ConfigurableApplicationContext startMcpRegistryContext(String[] args,
-                                                                          ConfigurableApplicationContext coreContext) {
-        NacosStartUpManager.start(NacosStartUp.MCP_REGISTRY_START_UP_PHASE);
-        return new SpringApplicationBuilder(NacosMcpRegistry.class).parent(coreContext)
-                .banner(getBanner("nacos-mcp-registry-banner.txt")).run(args);
+    
+    private static ConfigurableApplicationContext startAiRegistryContext(String[] args,
+        ConfigurableApplicationContext coreContext) {
+        NacosStartUpManager.start(NacosStartUp.AI_REGISTRY_START_UP_PHASE);
+        return new SpringApplicationBuilder(NacosAiRegistry.class).parent(coreContext)
+            .banner(getBanner("nacos-ai-registry-banner.txt")).run(args);
     }
-
+    
     private static ConfigurableApplicationContext startOnlyConsole(String[] args) {
         NacosStartUpManager.start(NacosStartUp.CONSOLE_START_UP_PHASE);
-        ConfigurableApplicationContext consoleContext = new SpringApplicationBuilder(NacosConsole.class).banner(
-                getBanner("nacos-console-banner.txt")).run(args);
-		return consoleContext;
+        return new SpringApplicationBuilder(NacosConsole.class).banner(
+            getBanner("nacos-console-banner.txt")).run(args);
     }
-
+    
     private static Banner getBanner(String bannerFileName) {
         return new ResourceBanner(new ClassPathResource(bannerFileName));
     }
-
-    private static boolean isEnabledMcpRegistryApi(ConfigurableApplicationContext coreContext) {
-        return coreContext.getEnvironment().getProperty("nacos.ai.mcp.registry.enabled", Boolean.class, false);
+    
+    private static boolean isEnabledAiRegistry(ConfigurableApplicationContext coreContext) {
+        boolean mcpRegistryEnabled = coreContext.getEnvironment()
+            .getProperty("nacos.ai.mcp.registry.enabled", Boolean.class, false);
+        boolean skillRegistryEnabled = coreContext.getEnvironment()
+            .getProperty("nacos.ai.skill.registry.enabled", Boolean.class, false);
+        return mcpRegistryEnabled || skillRegistryEnabled;
     }
 }
